--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,43 +1,31 @@
-name: deploy github pages
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build-deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
 
-    - name: setup node
-      uses: actions/setup-node@v1
+    - name: Setup Node
+      uses: actions/setup-node@v3
       with:
-        node-version: '12.x'
+        node-version: 16
+        cache: yarn
 
-    - name: Cache dependencies
-      uses: actions/cache@v1
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
+    - name: Install dependencies
+      run: yarn --frozen-lockfile
 
-    - name: install
-      run: npm install --frozen-lockfile
+    - name: Build
+      run: yarn build
 
-    - name: build
-      run: npm run build
-
-    - name: export
-      run: npm run export
-
-    - name: add nojekyll
-      run: touch ./out/.nojekyll
-
-
-    - name: deploy
+    - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./out
+        publish_dir: out
