--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.3"
+    "eslint-config-next": "12.2.3",
+    "postcss": "^8.4.16",
+    "postcss-nested": "^5.0.6",
+    "tailwindcss": "^3.1.8"
   }
 }
