--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "postcss": "^8.4.16",
     "postcss-nested": "^5.0.6",
     "tailwindcss": "^3.1.8"
+  },
+  "engines": {
+    "npm": "⚠️【お願い】npmではなくyarnを使ってください🙇yarn.lockを大事にしてください(切実)"
   }
 }
